--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="shortcut icon" href="/img/Logo redondo.png">
     <title>Turismo Viaggio</title>
    
 </head>
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">SOBRE NOSOTROS</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">EXCURSIONES</li>
