--- a/indexA.html
+++ b/indexA.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">SOBRE NOSOTROS</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">EXCURSIONES</li>
