--- a/indexA.html
+++ b/indexA.html
@@ -26,7 +26,7 @@
 
     </header>
     <div class="contenedor"></div>
-        <div class="banner" style="background-image: url('./img/banner.jpg')" >
+        <div class="banner" style="background-image: url('./img/banner.png')" >
         </div>
     
 		<div class="contenedor-excursiones">
