--- a/indexC.html
+++ b/indexC.html
@@ -33,7 +33,7 @@
     
     <div class="contenedorform"></div>
         <h3 class="t3">Comunicate con nosotros</h3>
-        <form id="formContacto" action=https://formspree.io/forms method="POST">
+        <form id="formContacto" action=https://formspree.io/f/mgebqbzb method="POST">
              <label>Email:</label>
              <input type="email" name="email" required />
               
@@ -52,6 +52,36 @@
             <button id="form-button">Enviar</button>
             <p id="my-form-status"></p>
         </form>
+
+    <script>
+            let form = document.getElementById("formContacto");
+debugger;
+async function handleSubmit(event) {
+  event.preventDefault();
+  let status = document.getElementById("formContacto-status");
+  let data = new FormData(event.target);
+  fetch(event.target.action, {
+    method: form.method,
+    body: data,
+    headers: {
+        'Accept': 'application/json'
+    }
+  }).then(response => {
+    if (response.ok) {
+      form.reset();
+      alert("Gracias por completar el formulario");
+    } else {
+      response.json().then(data => {
+          status.innerHTML = "Hubo un problema al enviar su formulario"
+        }
+      )
+    }
+  }).catch(error => {
+    status.innerHTML = "Hubo un problema al enviar su formulario"
+  });
+}
+form.addEventListener("form-button", handleSubmit)
+    </script>
   
 
 
