--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="contenedor"></div>
         <div class="banner" style="background-image: url('./img/banner.jpg')" >
         </div>
-    
-	
-  
+    <div id="mapa"></div>
+	<script>src="script.js"</script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9v919E-RNoxfvc-Hqik&callback=iniciar"></script>
 
 
     <footer>
@@ -56,6 +56,6 @@
 
 
 
-    <script src="/js/eventos.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
