--- a/indexC.html
+++ b/indexC.html
@@ -105,6 +105,6 @@ form.addEventListener("form-button", handleSubmit)
 
 
 
-    <script src="/js/eventos.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
