--- a/indexA.html
+++ b/indexA.html
@@ -9,13 +9,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Kaushan+Script&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="shortcut icon" href="/img/Logo redondo.png">
     <title>Turismo Viaggio</title>
    
 </head>
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/TURISMO.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">Sobre nosotros</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">Excursiones</li>
@@ -34,8 +35,8 @@
 
 			<div class="excursion" style="background-image: url('./img/1.jpg')">
 				<div class="textos">
-					<h3>Excursion 1</h3>
-					<p>Costo $</p>
+					<h3>Aconcagua</h3>
+					<p>Costo $49.800</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
@@ -43,40 +44,40 @@
 
             <div class="excursion" style="background-image: url('./img/2.jpg')">
 				<div class="textos">
-					<h3>Excursion 2</h3>
-					<p>Costo $</p>
+					<h3>Salta</h3>
+					<p>Costo $38.999</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
 
             <div class="excursion" style="background-image: url('./img/3.jpg')">
 				<div class="textos">
-					<h3>Excursion 3</h3>
-					<p>Costo $</p>
+					<h3>Bariloche</h3>
+					<p>Costo $41.999 PROMOCION LIMITADA</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
 
             <div class="excursion" style="background-image: url('./img/4.jpg')">
 				<div class="textos">
-					<h3>Excursion 4</h3>
-					<p>Costo $</p>
+					<h3>Cataratas</h3>
+					<p>Costo $62.999</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
 
             <div class="excursion" style="background-image: url('./img/5.jpg')">
 				<div class="textos">
-					<h3>Excursion 5</h3>
-					<p>Costo $</p>
+					<h3>Cordoba</h3>
+					<p>Costo $35.999</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
 
             <div class="excursion" style="background-image: url('./img/6.jpg')">
 				<div class="textos">
-					<h3>Excursion 6</h3>
-					<p>Costo $</p>
+					<h3>San Juan</h3>
+					<p>Costo $53.800</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
