--- a/indexB.html
+++ b/indexB.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/TURISMO.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">Sobre nosotros</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">Excursiones</li>
@@ -38,7 +38,8 @@
 				<div class="textos">
 					<h3>No te pierdas nuestra promo del mes!</h3>
                     <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">
-					
+				<h3> Vivi esa aventura que siempre soñaste. Ahora en rebaja!</h3>
+                    <img class="promos" src="/img/bariloche promo.png"	
                     
 				</div>
 			</div>
