--- a/indexC.html
+++ b/indexC.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/TURISMO.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">Sobre nosotros</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">Excursiones</li>
@@ -33,7 +33,7 @@
     
     <div class="contenedorform"></div>
         <h3 class="t3">Comunicate con nosotros</h3>
-        <form id="formContacto" action=https://formspree.io/f/mgebqbzb method="POST">
+        <form id="formContacto" action=https://formspree.io/forms method="POST">
              <label>Email:</label>
              <input type="email" name="email" required />
               
@@ -52,36 +52,6 @@
             <button id="form-button">Enviar</button>
             <p id="my-form-status"></p>
         </form>
-
-    <script>
-            let form = document.getElementById("formContacto");
-debugger;
-async function handleSubmit(event) {
-  event.preventDefault();
-  let status = document.getElementById("formContacto-status");
-  let data = new FormData(event.target);
-  fetch(event.target.action, {
-    method: form.method,
-    body: data,
-    headers: {
-        'Accept': 'application/json'
-    }
-  }).then(response => {
-    if (response.ok) {
-      form.reset();
-      alert("Gracias por completar el formulario");
-    } else {
-      response.json().then(data => {
-          status.innerHTML = "Hubo un problema al enviar su formulario"
-        }
-      )
-    }
-  }).catch(error => {
-    status.innerHTML = "Hubo un problema al enviar su formulario"
-  });
-}
-form.addEventListener("form-button", handleSubmit)
-    </script>
   
 
 
@@ -105,6 +75,6 @@ form.addEventListener("form-button", handleSubmit)
 
 
 
-    <script src="/js/script.js"></script>
+    <script src="/js/eventos.js"></script>
 </body>
 </html>
