--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="/img/Logo redondo.png" alt="icono TurismoViaggio">
+            <img class="iconP" src="/img/TURISMO.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
                 <li id="nosotros" type="button" onclick="location.href='/index.html'">Sobre nosotros</li>
                 <li id="excursiones" type="button" onclick="location.href='/indexA.html'">Excursiones</li>
@@ -30,9 +30,9 @@
     <div class="contenedor"></div>
         <div class="banner" style="background-image: url('./img/banner.jpg')" >
         </div>
-    <div id="mapa"></div>
-	<script>src="script.js"</script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9v919E-RNoxfvc-Hqik&callback=iniciar"></script>
+    
+	
+  
 
 
     <footer>
@@ -56,6 +56,6 @@
 
 
 
-    <script src="/js/script.js"></script>
+    <script src="/js/eventos.js"></script>
 </body>
 </html>
