--- a/indexC.html
+++ b/indexC.html
@@ -33,7 +33,7 @@
     
     <div class="contenedorform"></div>
         <h3 class="t3">Comunicate con nosotros</h3>
-        <form id="formContacto" action=https://formspree.io/forms method="POST">
+        <form id="formContacto" action=https://formspree.io/f/mgebqbzb method="POST">
              <label>Email:</label>
              <input type="email" name="email" required />
               
@@ -75,6 +75,6 @@
 
 
 
-    <script src="/js/eventos.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
