--- a/indexB.html
+++ b/indexB.html
@@ -38,11 +38,12 @@
 				<div class="textos">
 					<h3>No te pierdas nuestra promo del mes!</h3>
                     <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">
-				<h3> Vivi esa aventura que siempre soñaste. Ahora en rebaja!</h3>
+				<h3> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3>
                     <img class="promos" src="/img/bariloche promo.png"	
                     
-				</div>
-			</div>
+                </div>
+            </div>
+		</div>
 
 
           
