--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="contenedor"></div>
         <div class="banner" style="background-image: url('./img/banner.jpg')" >
         </div>
-    
-	
+    <div class="contenedor-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bu-XsOIzbsA?start=0&autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
-
+</div>
 
     <footer>
        
@@ -56,6 +56,6 @@
 
 
 
-    <script src="/js/eventos.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
