--- a/indexA.html
+++ b/indexA.html
@@ -53,7 +53,7 @@
             <div class="excursion" style="background-image: url('./img/3.jpg')">
 				<div class="textos">
 					<h3>Bariloche</h3>
-					<p>Costo $41.999 PROMOCION LIMITADA</p>
+					<p class="p1">Costo $41.999   **PROMO POR TIEMPO LIMITADO**</p>
                     <button class="boton">Comprar</button>
 				</div>
 			</div>
