--- a/indexB.html
+++ b/indexB.html
@@ -37,13 +37,11 @@
 			<div class="ofertas" style="background-image: url('./img/1.jpg')"> </div>
 				<div class="textos">
 					<h3>No te pierdas nuestra promo del mes!</h3>
-                    <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">
-				<h3> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3>
-                    <img class="promos" src="/img/bariloche promo.png" alt="Promo2">
-            
-           </div>     
+                    <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">  
+                    <img class="promos" src= "/img/Post Para Instagram Turismo Collage Blanco (1).png" alt="Promo2">
+                    <h3> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3></div>
            
-		
+                 "/img/bariloche promo.png"
 
 
 
