--- a/indexB.html
+++ b/indexB.html
@@ -36,7 +36,7 @@
 					<h3>No te pierdas nuestras promos del mes!</h3>
                     <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">  
                     <img class="promos" src= "/img/bariloche promo.png" alt="Promo2">
-                    <h3> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3></div>
+                    <h3> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3></div><br>
            
                  
 
