--- a/indexA.html
+++ b/indexA.html
@@ -32,7 +32,7 @@
     
 		<div class="contenedor-excursiones">
 
-			<div class="excursion" style="background-image: url('./img/1.jpg')">
+			<div class="excursion" style="background-image: url(img/mendoza\ \(aconcagua\).jpg)">
 				<div class="textos">
 					<h3>Aconcagua</h3>
 					<p>Costo $49.800</p>
@@ -41,7 +41,7 @@
 			</div>
 
 
-            <div class="excursion" style="background-image: url('./img/2.jpg')">
+            <div class="excursion" style="background-image: url(img/salta.jpg)">
 				<div class="textos">
 					<h3>Salta</h3>
 					<p>Costo $38.999</p>
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 
-            <div class="excursion" style="background-image: url('./img/3.jpg')">
+            <div class="excursion" style="background-image: url(img/bariloche.jpeg)">
 				<div class="textos">
 					<h3>Bariloche</h3>
 					<p class="p1">Costo $41.999   **PROMO POR TIEMPO LIMITADO**</p>
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 
-            <div class="excursion" style="background-image: url('./img/4.jpg')">
+            <div class="excursion" style="background-image: url(img/cataratas.jpg)">
 				<div class="textos">
 					<h3>Cataratas</h3>
 					<p>Costo $62.999</p>
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 
-            <div class="excursion" style="background-image: url('./img/5.jpg')">
+            <div class="excursion" style="background-image: url(img/cordoba.jpg)">
 				<div class="textos">
 					<h3>Córdoba</h3>
 					<p>Costo $35.999</p>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 
-            <div class="excursion" style="background-image: url('./img/6.jpg')">
+            <div class="excursion" style="background-image: url(img/san\ juan.png)">
 				<div class="textos">
 					<h3>San Juan</h3>
 					<p>Costo $53.800</p>
