--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="/img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li><img src="/img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
                 </ul><br>
-                <h4>@TurismoViaggio</h4>
+                <h4>consultas@turismoViaggio</h4>
                
             </div>
         </div>
