--- a/indexA.html
+++ b/indexA.html
@@ -8,20 +8,20 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Kaushan+Script&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="shortcut icon" href="/img/Logo redondo.png">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="./img/Logo redondo.png">
     <title>Turismo Viaggio</title>
    
 </head>
 <body>
     <header>
         <nav class="navegation">
-            <img class="iconP" src="/img/TURISMO.png" alt="icono TurismoViaggio">
+            <img class="iconP" src="./img/TURISMO.png" alt="icono TurismoViaggio">
             <ul class="Ulist">
-                <li id="nosotros" type="button" onclick="location.href='/index.html'">Sobre nosotros</li>
-                <li id="excursiones" type="button" onclick="location.href='/indexA.html'">Excursiones</li>
-                <li id="promos" type="button" onclick="location.href='/indexB.html'">Promo del mes</li>
-                <li id="contacto" type="button" onclick="location.href='/indexC.html'">Contacto</li>
+                <li id="nosotros" type="button" onclick="location.href='./index.html'">Sobre nosotros</li>
+                <li id="excursiones" type="button" onclick="location.href='./indexA.html'">Excursiones</li>
+                <li id="promos" type="button" onclick="location.href='./indexB.html'">Promo del mes</li>
+                <li id="contacto" type="button" onclick="location.href='./indexC.html'">Contacto</li>
             </ul>
         </nav>
 
@@ -99,12 +99,12 @@
                
                 <p class="p4">Seguinos en nuestras redes sociales</p>
                 <ul class="redesSociales">
-                    <li> <a href="https://www.facebook.com" target="blank"><img src="/img/log fb.png" style="height: 45px;" alt="Facebook" width="50px"></a></li>
-                    <li> <a href="https://www.instagram.com" target="blank"><img src="/img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
-                    <li><img src="/img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
+                    <li> <a href="https://www.facebook.com" target="blank"><img src="./img/log fb.png" style="height: 45px;" alt="Facebook" width="50px"></a></li>
+                    <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
+                    <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
                </ul><br>
                 <h4>consultas@turismoViaggio</h4>
-               
+            </a>
             </div>
         </div>
     </footer>
@@ -114,6 +114,6 @@
 
 
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
