--- a/indexC.html
+++ b/indexC.html
@@ -32,7 +32,7 @@
     <div class="contenedorform"></div>
         <h3 class="t3">Comunicate con nosotros</h3>
         <form id="formContacto" action=https://formspree.io/f/mgebqbzb method="POST">
-             <label>Email:</label>
+             <label>E-mail:</label>
              <input type="email" name="email" required />
               
             <label for="nombre">Nombre:</label>
