--- a/indexA.html
+++ b/indexA.html
@@ -48,9 +48,9 @@
 
             <div class="excursion" style="background-image: url(img/salta.jpg)">
 				<div class="textos">
-				<h3><span class="paq">.Salta.</span></h3><br><p>6 días-5 noches</p>   
+				<h3><span class="paq">.Salta.</span></h3><br><p>4 días-3 noches</p>   
 				</div>
-                <p>Costo $78.999</p>
+                <p>Costo $58.999</p>
                  <button class="boton">Info  -  Reservas</button>
 			</div>
 
@@ -81,7 +81,7 @@
 
             <div class="excursion" style="background-image: url(img/san\ juan.png)">
 				<div class="textos">
-				<h3> <span class="paq">.San Juan.</span> </h3><br><p>5 días-4 noches</p>
+				<h3> <span class="paq">.San Juan.</span> </h3><br><p>4 días-3 noches</p>
 					
 				</div><p>Costo $53.800</p>
                     <button class="boton">Info  -  Reservas</button>
@@ -103,7 +103,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
                </ul><br>
-                <h4>consultas@turismoViaggio</h4>
+                <h4>Consultas a: @TurismoViaggio</h4>
             </a>
             </div>
         </div>
