--- a/indexB.html
+++ b/indexB.html
@@ -34,9 +34,9 @@
 			<div class="ofertas" style="background-image: url('./img/1.jpg')"></div>
 				<div class="textos">
 					<h3 class="t3" style="text-align: center;">No te pierdas nuestras promos del mes!</h3>
-                    <img class="promos" src="/img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">
+                    <img class="promos" src="./img/Post Para Instagram Turismo Collage Blanco.png" alt="Promo">
                     <br>  
-                    <img class="promos" src= "/img/bariloche promo.png" alt="Promo2">
+                    <img class="promos" src= "./img/bariloche promo.png" alt="Promo2">
                     <h3 class="t3" style="text-align: center;"> Viví esa aventura que siempre soñaste. Ahora en rebaja!</h3>
                 </div><br>
            
@@ -56,7 +56,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Instagram" width="60px"></a></li>
                </ul><br>
-                <h4>Consultas a: @TurismoViaggio</h4>
+                <h4>consultas@turismoviaggio.com</h4>
                
             </div>
         </div>
