--- a/indexA.html
+++ b/indexA.html
@@ -103,7 +103,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
                </ul><br>
-                <h4>Consultas a: @TurismoViaggio</h4>
+                <h4>consultas@turismoviaggio.com</h4>
             </a>
             </div>
         </div>
