--- a/indexA.html
+++ b/indexA.html
@@ -101,10 +101,10 @@
                 <ul class="redesSociales">
                     <li> <a href="https://www.facebook.com" target="blank"><img src="./img/log fb.png" style="height: 45px;" alt="Facebook" width="50px"></a></li>
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
-                    <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></li>
+                    <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></a></li> 
                </ul><br>
-                <h4>consultas@turismoviaggio.com</h4>
-            </a>
+                <h4> <a href="mailto:"> consultas@turismoviaggio.com</a></h4>
+           
             </div>
         </div>
     </footer>
