--- a/indexB.html
+++ b/indexB.html
@@ -55,8 +55,8 @@
                     <li> <a href="https://www.facebook.com" target="blank"><img src="./img/log fb.png" style="height: 45px;" alt="Facebook" width="50px"></a></li>
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Instagram" width="60px"></a></li>
-               </ul><br>
-                <h4>consultas@turismoviaggio.com</h4>
+                </ul><br>
+                <h4> <a href="mailto:"> consultas@turismoviaggio.com</a></h4>
                
             </div>
         </div>
