--- a/indexC.html
+++ b/indexC.html
@@ -32,8 +32,8 @@
     <div class="contenedorform"></div>
         <h3 class="t3">Comunicate con nosotros</h3>
         <form id="formContacto" action=https://formspree.io/f/mgebqbzb method="POST">
-             <label>E-mail:</label>
-             <input type="email" name="email" required />
+            <label>E-mail:</label>
+            <input type="email" name="email" required />
               
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
@@ -63,7 +63,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></a></li>
                </ul><br>
-                <h4>consultas@turismoviaggio.com</h4>
+               <h4> <a href="mailto:"> consultas@turismoviaggio.com</a></h4>
                
             </div>
         </div>
