--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li> <a href="https://www.instagram.com" target="blank"><img src="./img/ig log.png" style="height: 50px;" alt="Instagram" width="50px"></a></li>
                     <li> <a href="https://web.whatsapp.com/>" target="blank"><img src="./img/log wapp.png" style="height: 50px;" alt="Whatsapp"></a></li>
                 </ul><br>
-                <h4>consultas@turismoviaggio.com</h4>
+                <h4> <a href="mailto:"> consultas@turismoviaggio.com</a></h4>
                
             </div>
         </div>
