--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
     </header>
     <div class="contenedor">
-         <h2>Sobre Nosotros</h2>
-         <div class="contenedor-nosotros"></div>
-         <p class="p0">Turismo Viaggio es una empresa argentina con sede en Buenos Aires, con más 10 años de experiencia en el recorrido de las principales rutas turísticas de la República Argentina.
-
-            Nuestro objetivo es acercar la belleza más profunda de nuestro país a visitantes del mundo entero y que el recuerdo de esa experiencia sea único. <br><br> ¡Te damos la bienvenida a tu próxima aventura!</p>
-         <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/bu-XsOIzbsA?start=0&autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
+        <h2>Sobre Nosotros</h2>
+        <div class="contenedor-nosotros"></div>
+        <p class="p0">  Turismo Viaggio es una empresa argentina con sede en Buenos Aires, con más 10 años de experiencia en el recorrido de las principales rutas turísticas de la República Argentina.
+                        Nuestro objetivo es acercar la belleza más profunda de nuestro país a visitantes del mundo entero y que el recuerdo de esa experiencia sea único. <br><br> ¡Te damos la bienvenida a tu próxima aventura!</p>
+        <br class="espacio">    
+        <iframe class="video" width="100%" height="300" src="https://www.youtube.com/embed/bu-XsOIzbsA?start=0&autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
     </div>
 
     <footer>
